<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:text="@string/origin_psw"/>

        <EditText
            android:id="@+id/origin_psw"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textWebPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:text="@string/new_psw"/>

        <EditText
            android:id="@+id/new_psw"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint= "@string/set_psw_hint"
            android:inputType="textWebPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:text="@string/confirm_psw"/>

        <EditText
            android:id="@+id/confirm_psw"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirm_psw_hint"
            android:inputType="textWebPassword" />
    </LinearLayout>

    <Button android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/submit_button"
        android:layout_marginTop="100dp"
        android:text="@string/submit"/>

</LinearLayout>