<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/portrait_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/default_protrait"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFFFF"/>

    <!-- Phone Num -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:labelFor="@id/phone_num"
            android:text="@string/phone_num"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Username -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/username_hint"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/set_username_hint"
            android:maxLines="1"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/set_psw"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/set_psw"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/set_psw_hint"
            android:maxLines="1"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Confirm password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/confirm_p"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/confirm_psw"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/confirm_psw_hint"
            android:maxLines="1"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/submit_button"
        android:text="@string/submit"
        android:textColor="@color/gray"
        android:textSize="25sp"/>

</LinearLayout>

