<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFFFFF">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/self_report_content"/>

    <EditText
        android:id="@+id/hurt_level_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/self_report_hint"
        android:inputType="number"
        android:textSize="20sp" />

    <Button android:id="@+id/submit_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/submit_button"
        android:text="@string/submit"/>

</LinearLayout>
