<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dip">


        <!-- Time choosing -->
        <TimePicker android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode = "spinner"
            android:layout_marginTop="15dp">
        </TimePicker>


        <!-- Image and sound choosing -->
        <Button android:id="@+id/image_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/Coral"
            android:text="@string/image_choosing"
            android:textColor="#FFFFFF"/>

        <Button android:id="@+id/sound_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/Coral"
            android:text="@string/sound_choosing"
            android:textColor="#FFFFFF"/>

        <Button android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/submit_button"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</ScrollView>
