<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:text="@string/ques_content"/>

        <TextView android:id="@+id/ques_content"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <TextView
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/expert_reply"
            android:background="@color/orange"/>

        <TextView android:id="@+id/expert_reply"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:textSize="20sp"/>

        <LinearLayout android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/olive">

            <TextView
                android:layout_height="50dp"
                android:layout_width="250dp"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="@string/reply" />

            <LinearLayout android:id="@+id/add_reply_btn"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:background="@color/olive">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/icon_add"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#FFFFFF"
                    android:text="@string/add_reply"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>


        <ListView android:id="@+id/my_ques_reply_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"/>

    </LinearLayout>

</ScrollView>


