<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFFFFF">

    <TextView android:id="@+id/t1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/counted_star"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView android:id="@+id/star_txt"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_width="60dp"
            android:textColor="	#696969"
            android:textSize="40sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/stars"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:background="@color/lightGreen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/rank"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/user_rank"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2.5"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:textColor="#696969"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/total_users"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2.5"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:textColor="#696969"
            android:textSize="25sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/star_rank_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</LinearLayout>


